--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "buildExamples": "tsc -p ./examples",
     "watchExamples": "tsc -w -p ./examples"
   },
-  "main": "./bundles/ng2-page-slider.umd.js",
-  "module": "./bundles/ng2-page-slider.es.js",
-  "es2015": "./bundles/ng2-page-slider.es.js",
-  "types": "./typings/ng2-page-slider.d.ts",
-  "typings": "./typings/ng2-page-slider.d.ts",
+  "main": "./bundles/ng-page-slider.umd.js",
+  "module": "./bundles/ng-page-slider.es.js",
+  "es2015": "./bundles/ng-page-slider.es.js",
+  "types": "./typings/ng-page-slider.d.ts",
+  "typings": "./typings/ng-page-slider.d.ts",
   "keywords": [
     "Angular2",
     "NG2",
